# connect4

./: .gitignore  Dockerfile  README.md  c4solver  c4solver-mac  connect4.py  pyproject.toml  render.yaml
static/: index.html
